@@ -109,6 +109,25 @@ RSpec.describe Elasticity::IndexConfig do
       end
     end
 
+    describe "passing the include_type_name option" do
+      it "allows passing of a include_type_name_on_create option" do
+        config = described_class.new(elasticity_config, defaults) {}
+        expect(config.index_base_name).to eql('users')
+        expect(config.document_type).to eql('user')
+        expect(config.include_type_name_on_create).to be_falsy
+
+        config = described_class.new(elasticity_config, defaults) do |c|
+          c.index_base_name = 'user_documents'
+          c.document_type = 'users'
+          c.include_type_name_on_create = true
+        end
+
+        expect(config.index_base_name).to eql('user_documents')
+        expect(config.document_type).to eql('users')
+        expect(config.include_type_name_on_create).to be_truthy
+      end
+    end
+
     def stub_version(version)
       allow_any_instance_of(Elasticity::InstrumentedClient).to receive(:versions).and_return([version])
     end
