@@ -4,6 +4,7 @@ v0.13.0
   - use timestamp with no colons
   - update elasticsearch gem version for consistency with target ES version
   - expose refresh_index to force write (because in v7, flush no longer forces writes)
+  - allow for optional 'include_type_name_on_create' arg so that the :include_type_name can be passed
 v0.12.1
   - use Arel.sql to avoid unsafe sql and eliminate deprecation warnings when used in Rails projects
 v0.12.0
